# online-mart

./: compose.yaml  readme.md
inventory-service/: .env  pyproject.toml
inventory-service/app/: auth.py  consumer.py  dependency.py  inventory.proto  inventory_consumer.py  inventory_pb2.py  inventory_producer.py  main.py  settings.py  stock_update.py
notification-service/: .env  pyproject.toml
notification-service/app/: auth.py  main.py  notificatio_handler.py  notification.proto  notification_consumer.py  notification_db.py  notification_producer.py  settings.py
order-service/: .env  pyproject.toml
order-service/app/: auth.py  main.py  order.proto  order_consumer.py  order_db.py  order_producer.py  payment_processing.py  settings.py
payment-service/: .env  pyproject.toml
payment-service/app/: auth.py  main.py  payment.proto  payment_consumer.py  payment_db.py  payment_producer.py  settings.py
payment-service/tests/: test_main.py
product-service/: .env  Dockerfile.dev  pyproject.toml
product-service/app/: auth.py  consumer.py  db.py  dpdcy.py  main.py  product.proto  product_consumer.py  product_db.py  product_producer.py  settings.py
user-service/: .env  Dockerfile.dev  pyproject.toml
user-service/app/: dep.py  main.py  security.py  settings.py  user.proto  user_consumer.py  user_db.py  user_producer.py
user-service/app/authentication/: admin.py  auth.py
user-service/app/crud/: user_crud.py
user-service/app/model/: user_model.py
user-service/app/models/: user_model.py
user-service/app/utils/: user_email.py
(+30 files in other folders)
