[tool.poetry]
name = "user-service"
version = "0.1.0"
description = "user service for online mart"
authors = ["Raja Anas Turk <rajaanasturk157@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
sqlmodel = "^0.0.19"
uvicorn = "^0.30.1"
psycopg = "^3.1.19"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
